# -

./: .gitignore  AGENTS.md  NIF3XScRNA.py  README.md  go.mod  requirements-backtest.txt  requirements.txt  setup.py  归档_神话项目2.md  项目说明.md
chanlun/: README.md  __init__.py  analyzer.py  backtest.py  data_clean.py  data_loader.py  demo.py  export.py  fractal.py  incremental.py  kline.py  macd.py  models.py  pivot.py  sample.py  signals.py  stroke.py  stroke_rules.py  test_ajiao_stroke.py  test_backtest_friction.py  test_chanlun.py  test_export.py  test_incremental.py  test_stroke_vulnerabilities.py
claude-api-example/: README.md  batch.py  caching.py  chat.py  structured_output.py  tools.py
configs/: chanlun_btc.json  chanlun_pepe_5m.json  pangu_symbolic_kb.json
data/: BTCUSDT_5m.csv
distributed-scheduler/: .gitignore  CMakeLists.txt  README.md  bench.sh
distributed-scheduler/src/: hub.cpp  io_thread.cpp  io_thread.h  prof.cpp  prof.h  protocol.h  scheduler.cpp  scheduler.h  shared_state.h  wal.cpp  wal.h  worker_bench.cpp  worker_node.h  worker_pool.cpp  worker_pool.h
distributed-scheduler/tests/: test_wal_replay.cpp
distributed_scheduler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: api-backtest.openapi.yaml  github-repos.md  project-status.md  trading-system.md
llm-scheduler-integration/: README.md  llm_worker.py  requirements.txt  run_demo.sh  submit_tasks.py
memory/: __init__.py  core_recall.py  event_log.py  inbox.py  integrity.py  recall.py  review_gate.py  trace.py
money-system/: README.md  V3_项目说明书.md  backtest_v2.py  backtest_v3.py  compare_v1_v2_v3.py  (+8 more)
(+184 files in other folders)
